--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,8 +22,8 @@ jobs:
       - init
     uses: milaboratory/github-ci/.github/workflows/node-simple-pnpm.yaml@v4
     with:
-      app-name: 'Block: Cluster-Markers'
-      app-name-slug: 'block-cluster-markers'
+      app-name: 'Block: XSV Import'
+      app-name-slug: 'block-xsv-import'
       notify-telegram: true
       node-version: '20.x'
       build-script-name: 'build'
