--- a/.github/workflows/mark-stable.yaml
+++ b/.github/workflows/mark-stable.yaml
@@ -14,7 +14,7 @@ jobs:
       - init
     uses: milaboratory/github-ci/.github/workflows/block-mark-stable.yaml@v4
     with:
-      app-name: 'Block: Cluster-Markers - Mark Stable'
+      app-name: 'Block: XSV-Import - Mark Stable'
       notify-telegram: true
       node-version: '20.x'
       npmrc-config: |
